--- a/flat site/index.html
+++ b/flat site/index.html
@@ -9,27 +9,27 @@
 </head>
 <body>
 	<header id="mainhead">
-		<h1 id="logo">OpenLab-Blueprint</h1>
+		<a href="../olbp/index.html"><h1 id="logo">OpenLab-Blueprint</h1></a>
 		<nav id="mainnav">
 			<ul>
-				<li><a href="#">Community</a></li>
-				<li><a href="#">Space</a></li>
-				<li><a href="#">Equipment</a></li>
-				<li><a href="#">Nuts & Bolts</a></li>
-				<li><a href="#">Fundraising</a></li>
-				<li><a href="#">Biosafety</a></li>
-				<li><a href="#">About</a></li>
+				<li><a href="../olbp/community.html">Community</a></li>
+				<li><a href="../olbp/space.html">Space</a></li>
+				<li><a href="../olbp/equipment.html">Equipment</a></li>
+				<li><a href="../olbp/nutsandbolts.html">Nuts & Bolts</a></li>
+				<li><a href="../olbp/fundraising.html">Fundraising</a></li>
+				<li><a href="../olbp/biosafety.html">Biosafety</a></li>
+				<li><a href="../olbp/about.html">About</a></li>
 			</ul>
 		</nav>
 	</header>
 	<section id="intro-slider" class="fade">
 		<div class="slide">
-			<img src="lady.jpg" alt="" />
+			<img src="../olbp/img/lady.jpg" alt="" />
 			<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. <cite>- Heather Dewey-Hagborg</cite></blockquote>
 		</div>
 		<div class="slide">
-			<img src="lady2.jpg" alt="" />
-			<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. <cite>- Not Heather Dewey-Hagborg</cite></blockquote>
+			<img src="../olbp/img/christal.jpg" alt="" />
+			<blockquote>There are few places in the world where I get hands-on experience doing synthetic biology experiments. Genspace is a haven for intellectually adventurous people. <cite>- Christal Gordon</cite></blockquote>
 		</div>
 	</section>
 	<section id="what">
@@ -39,32 +39,32 @@
 	</section>
 	<section id="icons">
 		<div class="row clearfix">
-			<div class="column red-bg" id="community">
-				<img src="people_nobg.png" alt="" />
+			<a href="../olbp/community.html"><div class="column green-bg" id="community">
+				<img src="../olbp/img/people_nobg.png" alt="" />
 				<h4>Community</h4>
-			</div>
-			<div class="column blue-bg" id="space">
-				<img src="space_nobg.png" alt="" />
+			</div></a>
+			<a href="../olbp/space.html"><div class="column blue-bg" id="space">
+				<img src="../olbp/img/space_nobg.png" alt="" />
 				<h4>Space</h4>
-			</div>
-			<div class="column orange-bg">
-				<img src="equipment_nobg.png" alt="" />
+			</div></a>
+			<a href="../olbp/equipment.html"><div class="column orange-bg">
+				<img src="../olbp/img/equipment_nobg.png" alt="" />
 				<h4>Equipment</h4>
-			</div>
+			</div></a>
 		</div>
 		<div class="row clearfix">
-			<div class="column green-bg">
-				<img src="nutsbolts_nobg.png" alt="" />
+			<a href="../olbp/nutsandbolts.html"><div class="column sky-bg">
+				<img src="../olbp/img/nutsbolts_nobg.png" alt="" />
 				<h4>Nuts & Bolts</h4>
-			</div>
-			<div class="column sky-bg">
-				<img src="fundraising_nobg.png" alt="" />
+			</div></a>
+			<a href="../olbp/fundraising.html"><div class="column lime-bg">
+				<img src="../olbp/img/fundraising_nobg.png" alt="" />
 				<h4>Fundraising</h4>
-			</div>
-			<div class="column lime-bg">
-				<img src="biosafety_nobg.png" alt="" />
+			</div></a>
+			<a href="../olbp/biosafety.html"><div class="column red-bg">
+				<img src="../olbp/img/biosafety_nobg.png" alt="" />
 				<h4>Biosafety</h4>
-			</div>
+			</div></a>
 		</div>
 	</section>
 	<footer id="mainfoot"></footer>
@@ -77,7 +77,7 @@
 				arrows: false,
 				autoplay: true,
 				infinite: true,
-				speed: 500,
+				speed: 400,
 				fade: true,
 				cssEase: 'linear'
 			});
