--- a/flat site/biosafety.html
+++ b/flat site/biosafety.html
@@ -11,19 +11,19 @@
 		<a href="../olbp/index.html"><h1 id="logo">OpenLab-Blueprint</h1></a>
 		<nav id="mainnav">
 			<ul>
-				<li><a class="current" href="../olbp/community.html">Community</a></li>
+				<li><a href="../olbp/community.html">Community</a></li>
 				<li><a href="../olbp/space.html">Space</a></li>
 				<li><a href="../olbp/equipment.html">Equipment</a></li>
 				<li><a href="../olbp/nutsandbolts.html">Nuts & Bolts</a></li>
 				<li><a href="../olbp/fundraising.html">Fundraising</a></li>
-				<li><a href="../olbp/biosafety.html">Biosafety</a></li>
+				<li><a class="current" href="../olbp/biosafety.html">Biosafety</a></li>
 				<li><a href="../olbp/about.html">About</a></li>
 			</ul>
 		</nav>
 	</header>
-	<section id="intro-paragraph" class="green-bg clearfix">
-		<img src="../olbp/img/people_nobg.png" alt="" class="icon" />
-		<h2>Community</h2>
+	<section id="intro-paragraph" class="red-bg clearfix">
+		<img src="../olbp/img/biosafety_nobg.png" alt="" class="icon" />
+		<h2>Biosafety & Biosecurity</h2>
 		<p>The magic of community labs is that they become places where people from diverse backgrounds come togther to do really cool stuff. It's always more fun to do stuff together.</p>
 	</section>
 	<section id="what">
