--- a/flat site/index.html
+++ b/flat site/index.html
@@ -28,8 +28,20 @@
 			<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. <cite>- Heather Dewey-Hagborg</cite></blockquote>
 		</div>
 		<div class="slide">
+			<img src="../olbp/img/julie.jpg" alt="" />
+			<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. <cite>- Julie Wolfe</cite></blockquote>
+		</div>
+			<div class="slide">
+			<img src="../olbp/img/student_01.jpg" alt="" />
+			<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. <cite>- Student 01</cite></blockquote>
+		</div>
+			<div class="slide">
 			<img src="../olbp/img/christal.jpg" alt="" />
 			<blockquote>There are few places in the world where I get hands-on experience doing synthetic biology experiments. Genspace is a haven for intellectually adventurous people. <cite>- Christal Gordon</cite></blockquote>
+		</div>
+			<div class="slide">
+			<img src="../olbp/img/student_02.jpg" alt="" />
+			<blockquote>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. <cite>- Student 02</cite></blockquote>
 		</div>
 	</section>
 	<section id="what">
