Updated logo sprite

--- a/flat site/nutsandbolts.html
+++ b/flat site/nutsandbolts.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header id="mainhead" class="solid white clearfix">
-		<a href="../olbp/index.html"><h1 id="logo">OpenLab-Blueprint</h1></a>
+		<a href="../olbp/index.html"><h1 id="logo" class="sky-logo">OpenLab-Blueprint</h1></a>
 		<nav id="mainnav">
 			<ul>
 				<li><a href="../olbp/community.html">Community</a></li>
