--- a/flat site/index.html
+++ b/flat site/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header id="mainhead">
-		<a href="../olbp/index.html"><h1 id="logo">OpenLab-Blueprint</h1></a>
+		<a href="../olbp/index.html"><h1 id="logo" class="white-logo">OpenLab-Blueprint</h1></a>
 		<nav id="mainnav">
 			<ul>
 				<li><a href="../olbp/community.html">Community</a></li>
